VaxCenter entity
